# ChatGPT

./: README.md  pyproject.toml
docs/: README.md
src/: chatbot.py
tests/: test_chatbot.py
