[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-example"
version = "0.1.0"
description = "Simple ChatGPT command-line interface"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["openai"]

[project.optional-dependencies]
logging = ["structlog"]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
chatbot = "src.chatbot:main"
